# traceratops

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  build_doc.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pre-commit.yml  test.yml
doc/source/: conf.py  index.rst
doc/source/contribute/: CONTRIBUTING.md  how_to_document.md
doc/source/scripts/: trace_filter.rst
docs/: PULL_REQUEST_TEMPLATE.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/contribute/: CONTRIBUTING.md  dev_installation.md  doc_from_scratch.md  generate_doc.md  how_to_document.md  import_pyhim_script.md  pr_checklists.md  release_guide.md
docs/source/contribute/checklist/: code_review.md  manual_test_checklist.md  pr_template_COPY.md
docs/source/contribute/documentation/: doc_from_scratch.md  generate_doc.md  rest_with_myst.md
docs/source/quickstart/: installation.md
docs/source/scripts/: figure_him_matrix.md  figure_him_matrix.rst  localization.md  localization_cp_files.md  localization_merge.md  matrix.md  plot.md  plot_3way.md  plot_4m.md  plot_bootstrapping.md  plot_n_him_matrices.md  plot_single_cell.md  process_him_matrix.md  replot_3way.md  trace.md  trace_analyser.md  trace_analyzer.md  trace_assign_mask.md  trace_correct_coordinates.md  trace_export_to_fofct.md  trace_filter.md  trace_filter_advanced.md  trace_import_from_fofct.md  trace_merge.rst  trace_pearsons.md  trace_splitter.md  trace_stats.md
docs/source/scripts/localization/: analyze_localizations.md  localization_merge.md
docs/source/scripts/matrix/: compare_pwd_matrices.md  figure_him_matrix.md  pwd_matrix_2_pdb.md
docs/source/scripts/plot/: plot_3way_coloc.md  plot_bootstrapping.md  plot_compare2matrices.md  plot_him_matrix.md  plot_matrix_comparison.md  replot_3way.md  trace_3way_coloc.md
docs/source/scripts/trace/: trace_3way_coloc.md  trace_combinator.md  trace_import_from_fofct.md  trace_impute_genomic_coordinates.md  trace_merge.md  trace_pearsons.md  trace_plot.md  trace_splitter.md  trace_stats.md  trace_to_matrix.md
docs/source/tutorials/: filter_intensity.md  plot_interactions.md
test/: test_chromatin_trace_table.py  test_figure_him_matrix.py  test_plot_him_matrix.py  test_trace_filter.py  test_trace_merge.py
test/data/figure_him_matrix/IN/: bc_4_cells_4.npy  unique_barcodes.ecsv
test/data/plot_him_matrix/IN/: bc_4_unique.csv  n_cells_250_pwd_sc_matrix.npy
test/data/trace_filter/IN/: duplicate_spot.ecsv  duplicate_spot_cleaned.ecsv  duplicate_spot_id.ecsv  forpipe1file.txt  forpipe2files.txt  intensity.ecsv  one_trace_four_spots.ecsv  remove_barcode.ecsv  trace_3D_barcode_KDtree_ROI-5.ecsv  two_traces_seven_spots.ecsv  xyz_min_max.ecsv
test/data/trace_merge/IN/: trace_1_spots_2.ecsv  trace_2_spots_2.ecsv  trace_3_merge_conflict.ecsv
traceratops/: _version.py  analyze_localizations.py  compare_pwd_matrices.py  figure_him_matrix.py  localization_cp_files.py  localization_merge.py  plot_3way_coloc.py  plot_4m.py  plot_bootstrapping.py  plot_compare2matrices.py  plot_him_matrix.py  plot_n_him_matrices.py  plot_single_cell.py  process_him_matrix.py  pwd_matrix_2_pdb.py  trace_3way_coloc.py  trace_analyzer.py  trace_assign_mask.py  trace_combinator.py  trace_correct_coordinates.py  trace_export_to_fofct.py  trace_filter.py  trace_filter_advanced.py  trace_import_from_fofct.py  trace_impute_genomic_coordinates.py  trace_merge.py  trace_pearsons.py  trace_plot.py  trace_splitter.py  trace_stats.py  trace_to_matrix.py
traceratops/core/: build_matrix.py  chromatin_trace_table.py  him_matrix_operations.py  io_manager.py  localization_table.py  plotting_functions.py
