[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traceratops"
version = "0.1.0"
description = "Toolbox for trace analysis"
readme = "README.md"
authors = [{ name = "Marcelo Nollmann", email = "marcelo.nollmann@cbs.cnrs.fr" }, { name = "Xavier Devos", email = "xavier.devos@cbs.cnrs.fr" }]
license = { file = "LICENSE" }
keywords = []
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "astropy",
    "tqdm",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-argparse",
    "myst-parser",
]

[project.urls]
Homepage = "https://github.com/pyHi-M/traceratops"

[project.scripts]
trace_filter = "traceratops.trace_filter:main"

# [tool.setuptools]
# include-package-data = true

# [tool.setuptools.package-data]
# "path.to.files" = ["*.json"]
