[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traceratops"
version = "0.2.2.dev2"
description = "Toolbox for trace analysis"
readme = "README.md"
authors = [
    { name = "Marcelo Nollmann", email = "marcelo.nollmann@cbs.cnrs.fr" },
    { name = "Xavier Devos", email = "xavier.devos@cbs.cnrs.fr" },
]
license = { file = "LICENSE" }
keywords = []

# --> think to duplicate all code dependencies to `docs/source/conf.py::autodoc_mock_imports`
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "astropy",
    "tqdm",
    "scipy",
    "scikit-learn",
]
requires-python = ">=3.9"

[project.optional-dependencies]
# When there is "for doc" comments
# --> think to duplicate to 'docs/requirements.txt'
dev = [
    "pytest",
    "sphinx",           # for doc
    "sphinx-rtd-theme", # for doc
    "sphinx-argparse",  # for doc
    "myst-parser",      # for doc
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/pyHi-M/traceratops"

[project.scripts]
trace_filter = "traceratops.trace_filter:main"
trace_merge = "traceratops.trace_merge:main"
figure_him_matrix = "traceratops.figure_him_matrix:main"

# [tool.setuptools]
# include-package-data = true

# [tool.setuptools.package-data]
# "path.to.files" = ["*.json"]
