[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traceratops"
version = "0.3.3"
description = "Toolbox for trace analysis"
readme = "README.md"
authors = [
    { name = "Marcelo Nollmann", email = "marcelo.nollmann@cbs.cnrs.fr" },
    { name = "Xavier Devos", email = "xavier.devos@cbs.cnrs.fr" },
]
license = { file = "LICENSE" }
keywords = []

# --> think to duplicate all code dependencies to `docs/source/conf.py::autodoc_mock_imports`
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "astropy",
    "tqdm",
    "scipy",
    "scikit-learn",
]
requires-python = ">=3.9"

[project.optional-dependencies]
# When there is "for doc" comments
# --> think to duplicate to 'docs/requirements.txt'
dev = [
    "pytest",
    "pre-commit",
    "mypy",
    "sphinx",           # for doc
    "sphinx-rtd-theme", # for doc
    "sphinx-argparse",  # for doc
    "myst-parser",      # for doc
    "sphinx-panels",    # for doc
]

[project.urls]
Homepage = "https://github.com/pyHi-M/traceratops"

[project.scripts]
trace_filter = "traceratops.trace_filter:main"
trace_merge = "traceratops.trace_merge:main"
figure_him_matrix = "traceratops.figure_him_matrix:main"
trace_to_matrix = "traceratops.trace_to_matrix:main"
trace_stats = "traceratops.trace_stats:main"
trace_splitter = "traceratops.trace_splitter:main"
trace_plot = "traceratops.trace_plot:main"
trace_pearsons = "traceratops.trace_pearsons:main"
trace_impute_genomic_coordinates = "traceratops.trace_impute_genomic_coordinates:main"
trace_import_from_fofct = "traceratops.trace_import_from_fofct:main"
trace_export_to_fofct = "traceratops.trace_export_to_fofct:main"
trace_filter_advanced = "traceratops.trace_filter_advanced:main"
trace_correct_coordinates = "traceratops.trace_correct_coordinates:main"
trace_combinator = "traceratops.trace_combinator:main"
trace_assign_mask = "traceratops.trace_assign_mask:main"
trace_analyzer = "traceratops.trace_analyzer:main"
pwd_matrix_2_pdb = "traceratops.pwd_matrix_2_pdb:main"
process_him_matrix = "traceratops.process_him_matrix:main"
localization_merge = "traceratops.localization_merge:main"
localization_cp_files = "traceratops.localization_cp_files:main"
compare_pwd_matrices = "traceratops.compare_pwd_matrices:main"
analyze_localizations = "traceratops.analyze_localizations:main"
replot_3way = "traceratops.replot_3way:main"
plot_bootstrapping = "traceratops.plot_bootstrapping:main"
plot_4m = "traceratops.plot_4m:main"
# plot_3way = "traceratops.plot_3way:main"
# plot_single_cell = "traceratops.plot_single_cell:main"
# plot_n_him_matrices = "traceratops.plot_n_him_matrices:main"
# plot_compare2matrices = "traceratops.plot_compare2matrices:main"

[tool.mypy]
python_version = "3.11"       # Python version used for mypy analysis
ignore_missing_imports = true # avoids import errors
disallow_untyped_defs = false # allows untyped functions (legacy code)
check_untyped_defs = true     # even analyses functions without annotations
warn_unused_ignores = true    # alert if a `# type: ignore` is unnecessary
show_error_codes = true       # displays error codes (useful for googling)
